# gitlab-merge-pipeline

./: .gitignore  Cargo.toml
src/: aggregator.rs  api.rs  config.rs  logging.rs  main.rs  merge_queue.rs
src/stages/: check_merge_request_status.rs  check_pipeline_status.rs  fetch_merge_requests.rs  mod.rs  start_merge_progress.rs
