[package]
name = "gitlab-merge-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
gitlab = "0.1609.2"
tokio = { version = "1.17", features = ["macros", "rt", "fs", "sync"] }
tokio-stream = "0.1"
color-eyre = "0.6.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
rolling-file = "0.2"
clap = "4.5"
serde = "1"
toml = "0.8"
directories = "5"
url = { version = "2.5.0", features = ["serde"] }
yansi = "1"
serde_json = "1"
termion = "3"
chrono = "0.4"
try-again = "0.1"